--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_noop
-	base = e489f31
-	trimbase = 
+	base = 1b54c26
+	trimbase = e489f31
 	parent = upstream
 	previous = e205235
