--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_spdlog
-	base = 24c2dc3
-	trimbase = 
+	base = 5205be2
+	trimbase = 24c2dc3
 	parent = upstream
 	previous = e205235
