--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_log4cxx
-	base = 32a33df
-	trimbase = 
+	base = 9716684
+	trimbase = 32a33df
 	parent = upstream
 	previous = e205235
