--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96b859c
+	base = 2e48730
 	trimbase = 
 	parent = debian/turbulent/rcl_logging_noop
-	previous = 
+	previous = 96b859c
