--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ee13c3
+	base = 7e09c5c
 	trimbase = 
 	parent = debian/turbulent/rcl_logging_spdlog
-	previous = 
+	previous = 2ee13c3
