--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d923f0
+	base = c67cf8a
 	trimbase = 
 	parent = debian/turbulent/rcl_logging_log4cxx
-	previous = 
+	previous = 7d923f0
