--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c8d3b01
-	base = 3dbe58d
-	trim = 
-	trimbase = 
+	base = 085a09a
+	trim = rcl_logging_spdlog
+	trimbase = 3dbe58d
