--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c8d3b01
-	base = 12d4764
-	trim = 
-	trimbase = 
+	base = 11d5fc8
+	trim = rcl_logging_noop
+	trimbase = 12d4764
