--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c8d3b01
-	base = 86396a8
-	trim = 
-	trimbase = 
+	base = 8da42ab
+	trim = rcl_logging_log4cxx
+	trimbase = 86396a8
