--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rcl_logging_noop
-	previous = 
-	base = 11d5fc8
+	previous = 11d5fc8
+	base = af7e5c6
 	trim = 
 	trimbase = 
