--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl_logging_noop
-	previous = 
-	base = a8fd78d
+	previous = a8fd78d
+	base = 7f9ee87
 	trim = 
 	trimbase = 
