--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/rcl_logging_spdlog
-	previous = 
-	base = 085a09a
+	previous = 085a09a
+	base = d5b4d19
 	trim = 
 	trimbase = 
