--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl_logging_spdlog
-	previous = 
-	base = ba33fd8
+	previous = ba33fd8
+	base = ba2b0a6
 	trim = 
 	trimbase = 
