--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/rcl_logging_log4cxx
-	previous = 
-	base = 0f63c7c
+	previous = 0f63c7c
+	base = 162a959
 	trim = 
 	trimbase = 
