--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_spdlog
-	base = 122aafd
-	trimbase = 
+	base = bd64594
+	trimbase = 122aafd
 	parent = upstream
 	previous = b115cc6
