--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_noop
-	base = ce38b5b
-	trimbase = 
+	base = 2d373b8
+	trimbase = ce38b5b
 	parent = upstream
 	previous = b115cc6
