--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_log4cxx
-	base = f584c2b
-	trimbase = 
+	base = 5e8560d
+	trimbase = f584c2b
 	parent = upstream
 	previous = b115cc6
