--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_spdlog
-	base = 93453e7
-	trimbase = 
+	base = b90a959
+	trimbase = 93453e7
 	parent = upstream
 	previous = f2da71c
