--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_noop
-	base = fa4ccfd
-	trimbase = 
+	base = 45cd1cd
+	trimbase = fa4ccfd
 	parent = upstream
 	previous = f2da71c
