--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_log4cxx
-	base = e5b3615
-	trimbase = 
+	base = 7757612
+	trimbase = e5b3615
 	parent = upstream
 	previous = f2da71c
