--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rcl_logging_log4cxx
-	base = 6a6a5dd
-	trimbase = 
+	base = cb459c3
+	trimbase = 6a6a5dd
 	parent = upstream
 	previous = 20a0e65
