--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4847081
-	base = f27d93a
-	trim = 
-	trimbase = 
+	base = a68b71e
+	trim = rcl_logging_noop
+	trimbase = f27d93a
