--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcl_logging_interface
-	previous = 
-	base = deaac1c
+	previous = deaac1c
+	base = 5b79e8c
 	trim = 
 	trimbase = 
