--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_logging_interface
-	previous = 
-	base = c1756e1
+	previous = c1756e1
+	base = 422bdbd
 	trim = 
 	trimbase = 
