--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_logging_noop
-	previous = 
-	base = b4aac53
+	previous = b4aac53
+	base = eb21db6
 	trim = 
 	trimbase = 
