--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_logging_spdlog
-	previous = 
-	base = 1e5dc70
+	previous = 1e5dc70
+	base = d6a5921
 	trim = 
 	trimbase = 
