--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_logging_noop
-	previous = 
-	base = bd182ef
+	previous = bd182ef
+	base = f5df194
 	trim = 
 	trimbase = 
