--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_logging_interface
-	previous = 
-	base = 4d429f4
+	previous = 4d429f4
+	base = 3b59e03
 	trim = 
 	trimbase = 
