--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcl_logging_spdlog
-	previous = 
-	base = f7b5997
+	previous = f7b5997
+	base = 13f6d63
 	trim = 
 	trimbase = 
