--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_logging_interface
-	previous = 
-	base = df37aa1
+	previous = df37aa1
+	base = 5c1464b
 	trim = 
 	trimbase = 
