--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_logging_noop
-	previous = 
-	base = abe1238
+	previous = abe1238
+	base = e2269c5
 	trim = 
 	trimbase = 
