--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_logging_spdlog
-	previous = 
-	base = 91c802f
+	previous = 91c802f
+	base = a8e8985
 	trim = 
 	trimbase = 
