--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcl_logging_spdlog
-	previous = 
-	base = bfdfcbc
+	previous = bfdfcbc
+	base = 1b842b0
 	trim = 
 	trimbase = 
