--- a/tracks.yaml
+++ b/tracks.yaml
@@ -149,7 +149,8 @@ tracks:
     ros_distro: humble
     vcs_type: git
     vcs_uri: https://github.com/ros2/rcl_logging.git
-    version: :{auto}
+    version: 2.3.0
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
