--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4cd200e
-	base = b2a7ccc
+	base = d136b72
 	trim = rcl_logging_spdlog
-	trimbase = 
+	trimbase = b2a7ccc
