--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4cd200e
-	base = 3d48d99
+	base = fd67122
 	trim = rcl_logging_interface
-	trimbase = 
+	trimbase = 3d48d99
