--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4cd200e
-	base = cde1ca8
+	base = 938d704
 	trim = rcl_logging_noop
-	trimbase = 
+	trimbase = cde1ca8
